# SnakeGame

./: CMakeLists.txt
src/: Drawer.cpp  Drawer.h  Input.h  Snake.h  SnakePart.cpp  SnakePart.h  main.cpp
